typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName16.ts.stderr
error: Expected ident
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName16.ts:3:3
  |
3 |   [e] = 1
  |   ^

